# ubds-database

./: .gitignore  CODEOWNERS  CONTRIBUTING.md  LICENSE  README.md
cli/: .gitignore  README.md  pyproject.toml
cli/src/dbf/: __init__.py  cli.py  constants.py  data.py  errors.py  images.py  info.py  schema.py  search.py  validate.py  vendor_map.py  version.py
cli/src/dbf/data/: ubds-v1.schema.json
cli/src/dbf/importers/: __init__.py  pio_field_map.py  platformio.py
cli/src/devboardfinder.egg-info/: SOURCES.txt  entry_points.txt  requires.txt
cli/tests/: conftest.py  requirements.txt  test_add_image.py  test_canonical_vocab.py  test_cli_surface.py  test_data.py  test_data_fetch.py  test_docs_hygiene.py  test_empty_cache_ux.py  test_errors.py  test_fetch_images_script.py  test_import_platformio.py  test_info.py  test_search.py  test_validate.py  test_validate_images.py  test_version.py
cli/tests/fixtures/: invalid-bad-enum.ubds.yaml  invalid-bad-slug.ubds.yaml  invalid-missing-name.ubds.yaml  invalid-tabs.ubds.yaml  invalid-trailing-ws.ubds.yaml  invalid-uppercase-mfr.ubds.yaml  invalid-uppercase-protocol.ubds.yaml  invalid-wrong-type.ubds.yaml  nucleo_f446re.json  pio_esp32_s3.json  valid-full.ubds.yaml  valid-minimal.ubds.yaml  version-mismatch-major.ubds.yaml  version-mismatch-minor.ubds.yaml
cli/tests/fixtures/c21-images/: .gitignore  README.md
cli/tests/fixtures/c21-images/boards/: clean-board.ubds.yaml  duplicated.ubds.yaml  fallback-only.ubds.yaml  (+4 more)
cli/tests/fixtures/cached_boards/: alpha-board.ubds.yaml  beta-board.ubds.yaml  gamma-board.ubds.yaml
cli/tests/fixtures/pio_dir/: a.json  b.json  c.json
(+83 files in other folders)
