[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dbf"
version = "0.1.0"
description = "Universal Board Description Standard CLI — validate, search, and import embedded dev board metadata."
readme = "README.md"
requires-python = ">=3.10,<3.13"
license = { text = "MIT" }
authors = [{ name = "devboardfinder" }]
dependencies = [
    "click==8.1.7",
    "pyyaml==6.0.2",
    "jsonschema==4.23.0",
    "rich==13.9.4",
    "requests==2.32.3",
    "rfc3987==1.3.8",
]

[project.scripts]
dbf = "dbf.cli:main"

[tool.setuptools]
package-dir = { "" = "src" }
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
# Bundle the UBDS schema so installed wheels work outside the worktree.
# Task 2 finalizes the loader; for now we ship whatever lands under src/dbf/data/.
dbf = ["data/*.json", "data/**/*.json"]
